--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -5,27 +5,32 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/application.yml'
+      - 'AzureWorkshop/**'
+      - 'AzureWorkshopTest/**'
   pull_request:
     branches: [ main ]
     paths:
       - '.github/workflows/application.yml'
+      - 'AzureWorkshop/**'
+      - 'AzureWorkshopTest/**'
   workflow_dispatch:
-
+    
 permissions:
   contents: read
+  id-token: write
+  actions: read
 
 jobs:
   deploy-test:
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'test'
-      webapp_secret_name: 'TEST_WEBAPP_NAME'
+      webapp_var_name: 'app-azskolen-test'
     secrets: inherit
-
   deploy-production:
     needs: deploy-test
     uses: ./.github/workflows/deploy-azure.yml
     with:
       releaseType: 'production'
-      webapp_secret_name: 'WEBAPP_NAME'
+      webapp_var_name: 'app-azskolen-test'
     secrets: inherit
