--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -1,8 +1,11 @@
 name: Deploy to Azure
 
+env:
+  ENVIRONMENT_NAME: ${{inputs.releaseType}}
+  AZURE_LOCATION: 'norwayeast'
+  RESOURCE_GROUP: 'rg-azskolen-${{inputs.releaseType}}'
+
 on:
-  release:
-    types: [published]
   workflow_dispatch: 
   workflow_call:
     inputs:
@@ -11,68 +14,69 @@ on:
         type: string
         required: true
         default: 'test'
-      webapp_secret_name:
-        description: 'Name of the secret containing webapp name'
-        type: string
-        required: true
-        default: 'TEST_WEBAPP_NAME'
 
 permissions:
-  id-token: write
   contents: read
+  id-token: write
+  actions: read
+
 
 jobs:
-  deploy:
-    name: Deploy to ${{ inputs.releaseType }}
-    environment: ${{ inputs.releaseType }}
-    runs-on: ubuntu-latest
-    
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: '8.0.x'
+    validate-bicep:
+      name: Validate Bicep
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+  
+        - name: Azure Login
+          uses: azure/login@v2
+          with:
+            client-id: ${{ secrets.AZURE_CLIENT_ID }}
+            tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+            subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: Cache NuGet packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.nuget/packages
-          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-nuget-
+        - name: Bicep lint
+          uses: azure/cli@v1
+          with:
+            inlineScript: |
+              set -e
+              echo "Running Bicep build ..."
+              az bicep build --file bicep/main.bicep
+              echo "Running Bicep lint..."
+              az bicep lint --file bicep/main.bicep
 
-      - name: Build and Test
-        working-directory: ./AzureWorkshopApp
-        run: |
-          dotnet restore
-          npm install dropzone @types/dropzone
-          dotnet build --configuration Release --no-restore
-          dotnet test ../AzureWorkshopAppTests/AzureWorkshopAppTests.csproj --no-restore --verbosity normal
+        - name: Bicep Validate
+          if: success()
+          uses: Azure/cli@v1
+          with:
+            inlineScript: |
+              set -e
+              echo "Validating Bicep template: rs-grp ${{env.RESOURCE_GROUP}}"
+              az deployment group validate \
+                --resource-group ${{ env.RESOURCE_GROUP }} \
+                --template-file ./bicep/main.bicep \
+                --parameters environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
         
-      - name: Publish
-        working-directory: ./AzureWorkshopApp
-        run: |
-          dotnet publish --configuration Release --no-build --output ${{ github.workspace }}/publish
-      
-      - name: Azure Login
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          enable-AzPSSession: true
-
-      - name: Deploy Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: ${{ secrets[inputs.webapp_secret_name] }}
-          package: ${{ github.workspace }}/publish
-            
-      - name: Health Check
-        run: |
-          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" https://${{ secrets[inputs.webapp_secret_name] }}.azurewebsites.net/health)
-          if [ "$RESPONSE" != "200" ]; then
-            echo "Health check failed with status $RESPONSE"
-            exit 1
+        - name: What-If Deployment
+          uses: azure/arm-deploy@v1
+          with:
+            scope: resourcegroup
+            resourceGroupName: ${{ env.RESOURCE_GROUP }}
+            template: ./bicep/main.bicep
+            parameters: environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+            deploymentMode: Validate
+            additionalArguments: --what-if
+                
+        - name: Deploy Bicep
+          if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+          id: deploy
+          uses: Azure/arm-deploy@v1
+          with:
+            scope: resourcegroup
+            resourceGroupName: ${{ env.RESOURCE_GROUP }}
+            template: ./bicep/main.bicep
+            parameters: 
+              environment=${{ env.ENVIRONMENT_NAME }}
+              location=${{ env.AZURE_LOCATION }}
+            failOnStdErr: false
