--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -36,6 +36,12 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+        - name: Upgrade Bicep
+          uses: azure/cli@v1
+          with:
+            inlineScript: |
+              az bicep upgrade
+
         - name: Bicep lint
           uses: azure/cli@v1
           continue-on-error: true
@@ -65,7 +71,8 @@ jobs:
               az deployment group validate \
                 --resource-group ${{ env.RESOURCE_GROUP }} \
                 --template-file ./bicep/main.bicep \
-                --parameters environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+                --parameters environment=${{ env.ENVIRONMENT_NAME }} \
+                            location=${{ env.AZURE_LOCATION }}
               if [ $? -ne 0 ]; then
                 echo "::error::Bicep validation failed"
                 exit 1
@@ -89,7 +96,5 @@ jobs:
             scope: resourcegroup
             resourceGroupName: ${{ env.RESOURCE_GROUP }}
             template: ./bicep/main.bicep
-            parameters: 
-              environment=${{ env.ENVIRONMENT_NAME }}
-              location=${{ env.AZURE_LOCATION }}
+            parameters: environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
             failOnStdErr: false
