--- a/.github/workflows/Application/build-deploy-app.yml
+++ b/.github/workflows/Application/build-deploy-app.yml
@@ -29,8 +29,20 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
 
+    - name: Echo build step
+      run: echo "Now building the application..."
+
     - name: Build
       run: dotnet build --configuration Release --no-restore
+
+    - name: Publish
+      run: dotnet publish ./AzureWorkshopApp/AzureWorkshopApp.csproj --configuration Release --output ./publish --no-build
+
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: dotnet-app
+        path: ./publish
 
     # - name: Publish
     #   run: dotnet publish ./AzureWorkshopApp/AzureWorkshopApp.csproj --configuration Release --output ./publish --no-build
