--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -22,13 +22,13 @@ permissions:
 
 jobs:
   deploy-test:
-    uses: ./.github/workflows/deploy-azure.yml
-    with:
-      releaseType: 'test'
+    uses: ./.github/workflows/application/build-deploy-app.yml
+#    with:
+#      releaseType: 'test'
     secrets: inherit
-  deploy-production:
-    needs: deploy-test
-    uses: ./.github/workflows/deploy-azure.yml
-    with:
-      releaseType: 'production'
-    secrets: inherit
+  # deploy-production:
+  #   needs: deploy-test
+  #   uses: ./.github/workflows/deploy-azure.yml
+  #   with:
+  #     releaseType: 'production'
+  #   secrets: inherit
