--- a/.github/workflows/build-deploy-app.yml
+++ b/.github/workflows/build-deploy-app.yml
@@ -1,4 +1,3 @@
-#Delete just for testing manually.
 name: Build and Deploy .NET Web App
 
 on:
@@ -35,6 +34,9 @@ jobs:
 
     - name: Build
       run: dotnet build --configuration Release --no-restore
+      
+    - name: Run Tests
+      uses: ./.github/workflows/Application/test.yml
 
     - name: Publish
       run: dotnet publish ./AzureWorkshopApp/AzureWorkshopApp.csproj --configuration Release --output ./publish --no-build
