--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Run Tests
 
 on:
-  workflow_dispatch: 
-  workflow_call:  
-  
+  workflow_dispatch:
+  workflow_call:
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -20,9 +20,7 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      working-directory: .
       run: dotnet restore
 
     - name: Run tests
-      working-directory: .
-      run: dotnet test AzureWorkshopAppTests/AzureWorkshopAppTests.csproj --configuration Release --no-restore --verbosity normal
+      run: dotnet test --configuration Release --no-restore --verbosity normal
