Bicep - azureskolen test filer
* Added first bicep files

* lagt til yaml file for IaC

* lagt på logging på lint

* Forsøk på deploy med azure/arm-deploy

* fjernet parameter fro build

* Byttet fra dev til TEST

* added resource group

* byttet scope to subscription

* scope til resource group

* Hardkodet ressursgruppe

* inlineScript validate

* Lagt til inline what-if

* Fjernet parametre

* delt opp bicep mal. test og whatif

* lagt til feilsjekk

* skrudd av whatif

* Ryddet opp i filer

* whatif with arm-deploy

* Reorganiserer yaml filer. Deler opp i app og infrastruktur

* Reorganiserer

* Flyttet yaml to workspaces root

* Slettet main.yml

* Fikset galt scope

* Added npm install fro dropzone

* Gjort application yaml modulær, igjen

* endret til små bokstaver

* revertet til tidligere

* byttet fram igjen

* flyttet submodul opp til root

* Lagt til permission og endret filter path

* FIkset permission

* Update GitHub Actions workflow and Bicep template with enhanced permissions and documentation

* Refactor GitHub Actions workflow to consolidate permissions for deployment jobs

* Update Azure deployment workflow to prepend 'app' to web app name for health check

* Refactor Azure deployment workflows to use variable for web app name instead of secret

* Add debug step to print webapp_var_name in Azure deployment workflow

* Fix syntax for webapp_var_name in Azure deployment workflow

* Fix variable syntax in Azure deployment workflows and add debug step for context printing

* Remove redundant debug output from Azure deployment workflow

* Update webapp_var_name in Azure deployment workflow to use a fixed app name

* Refactor Azure deployment workflows: remove obsolete deploy-azure.yml and update infrastructure.yml for streamlined deployment process

* Refactor Azure deployment workflows: consolidate deploy-azure.yml and update references in infrastructure.yml

* Refactor Azure deployment workflows: add environment variables and validate Bicep template

--- a/.github/workflows/application.yml
+++ b/.github/workflows/application.yml
@@ -21,16 +21,22 @@ permissions:
   actions: read
 
 jobs:
-  deploy-test:
-    uses: ./.github/workflows/deploy-azure.yml
+  publish-test:
+    uses: ./.github/workflows/build-app.yml
     with:
-      releaseType: 'test'
-      webapp_var_name: 'app-azskolen-test'
+      releasetype: 'test'
     secrets: inherit
-  deploy-production:
-    needs: deploy-test
-    uses: ./.github/workflows/deploy-azure.yml
+    
+  # publish-production:
+  #   needs: publish-test
+  #   uses: ./.github/workflows/deploy-azure.yml
+  #   with:
+  #     releasetype: 'production'
+  #   secrets: inherit
+
+  deploy:
+    needs: publish-test
+    uses: ./.github/workflows/deploy-to-azure.yml
     with:
-      releaseType: 'production'
-      webapp_var_name: 'app-azskolen-test'
+      releasetype: 'test'
     secrets: inherit
