--- a/.github/workflows/deploy-azure.yml
+++ b/.github/workflows/deploy-azure.yml
@@ -36,19 +36,34 @@ jobs:
             tenant-id: ${{ secrets.AZURE_TENANT_ID }}
             subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
+        - name: Upgrade Bicep
+          uses: azure/cli@v1
+          with:
+            inlineScript: |
+              az bicep upgrade
+
         - name: Bicep lint
           uses: azure/cli@v1
+          continue-on-error: true
           with:
             inlineScript: |
               set -e
               echo "Running Bicep build ..."
               az bicep build --file bicep/main.bicep
+              if [ $? -ne 0 ]; then
+                echo "::error::Bicep build failed"
+                exit 1
+              fi
               echo "Running Bicep lint..."
               az bicep lint --file bicep/main.bicep
+              if [ $? -ne 0 ]; then
+                echo "::error::Bicep lint failed"
+                exit 1
+              fi
 
         - name: Bicep Validate
-          if: success()
           uses: Azure/cli@v1
+          continue-on-error: true
           with:
             inlineScript: |
               set -e
@@ -56,7 +71,12 @@ jobs:
               az deployment group validate \
                 --resource-group ${{ env.RESOURCE_GROUP }} \
                 --template-file ./bicep/main.bicep \
-                --parameters environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
+                --parameters environment=${{ env.ENVIRONMENT_NAME }} \
+                            location=${{ env.AZURE_LOCATION }}
+              if [ $? -ne 0 ]; then
+                echo "::error::Bicep validation failed"
+                exit 1
+              fi
         
         - name: What-If Deployment
           uses: azure/arm-deploy@v1
@@ -69,14 +89,12 @@ jobs:
             additionalArguments: --what-if
                 
         - name: Deploy Bicep
-          if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+          if: (success() && ((github.event_name == 'push' && github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'))
           id: deploy
           uses: Azure/arm-deploy@v1
           with:
             scope: resourcegroup
             resourceGroupName: ${{ env.RESOURCE_GROUP }}
             template: ./bicep/main.bicep
-            parameters: 
-              environment=${{ env.ENVIRONMENT_NAME }}
-              location=${{ env.AZURE_LOCATION }}
+            parameters: environment=${{ env.ENVIRONMENT_NAME }} location=${{ env.AZURE_LOCATION }}
             failOnStdErr: false
