--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,9 +1,9 @@
 name: Run Tests
 
 on:
-  workflow_dispatch: 
-  workflow_call:  
-  
+  workflow_dispatch:
+  workflow_call:
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
@@ -21,8 +23,4 @@ jobs:
       run: dotnet restore
 
     - name: Run tests
-      run: |
-        dotnet test AzureWorkshopAppTests/AzureWorkshopAppTests.csproj\
-          --configuration Release\
-          --no-restore\
-          --verbosity normal
+      run: dotnet test --configuration Release --no-restore --verbosity normal
