Update Azure login action to v2 and enhance workflow triggers for build and deployment

--- a/.github/workflows/build1.yml
+++ b/.github/workflows/build1.yml
@@ -3,6 +3,8 @@ name: Build .NET App
 on:
   workflow_call:
   workflow_dispatch:
+  push:
+    branches: [ bicep ]  # remove, debug 
 
 jobs:
   build:
