--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,13 @@
-name: Build .NET App
+name: Build
 
 on:
   workflow_call:
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -40,13 +33,9 @@ jobs:
       run: npm ci
         
     - name: Restore dependencies
+      working-directory: ./AzureWorkshopApp
       run: dotnet restore
-      working-directory: ./AzureWorkshopApp
-
-    - name: Format check
-      run: dotnet format --verify-no-changes
-      working-directory: ./AzureWorkshopApp
         
     - name: Build
-      run: dotnet build --no-restore --configuration Release
       working-directory: ./AzureWorkshopApp
+      run: dotnet build --no-restore --configuration Release
