--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -1,38 +1,53 @@
-# This workflow handles the deployment of our application to Azure Web App Service
-# It's called by the main.yml workflow after build and login steps complete
+# This workflow handles deployment of our application to Azure Web App Service
 name: Deploy to Azure
 
-# Indicates this workflow can be called by other workflows
-# This enables modular workflow design and reusability
+# Define when this workflow can be triggered:
 on:
-  workflow_call:
+  workflow_dispatch:      # Enables manual trigger from GitHub UI
+  workflow_call:         # Allows this workflow to be called by the main workflows
+    inputs:
+      releaseType:       # Input parameter to specify deployment environment
+        description: 'Where to release (test or prod)?'
+        type: string
+        required: true
+        default: 'test'  # Default to test environment for safety
 
 jobs:
+  # Main deployment job
   deploy:
-    runs-on: ubuntu-latest    # Using Ubuntu for deployment tasks
-    environment: test         # Links to GitHub Environment 'test' containing deployment variables
+    # Dynamic naming based on deployment target
+    name: Deploy to ${{ inputs.releaseType }}
+    # Uses GitHub environments for managing deployment configurations
+    environment: ${{ inputs.releaseType }}
+
+    runs-on: ubuntu-latest    # Specifies the runner OS
+    
+    # Add variables section for environment-specific values
+    env:
+      APP_NAME: app-azskolen-${{ inputs.releaseType }}    # Dynamic app name based on environment
     
     steps:
-    # Move Azure login step
-    - name: Azure Login
-      uses: azure/login@v2
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      # Step 1: Authenticate with Azure using OIDC
+      # This is more secure than using stored credentials
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}          # App registration ID
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}          # Azure AD tenant
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}  # Azure subscription
 
-    # First, retrieve the build artifacts that were created in the build job
-    # These artifacts contain our compiled application ready for deployment
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: dotnet-app      # Must match the artifact name from build.yml
-        path: ./publish       # Local path where artifacts will be downloaded
+      # Step 2: Get the built application artifacts
+      # These were created by the build job and stored in GitHub
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dotnet-app    # Name of the artifact to download
+          path: ./publish     # Where to place the files locally
 
-    # Deploy the application to Azure Web App
-    # This step requires prior Azure authentication from 'Azure login step'
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ vars.AZURE_WEBAPP_NAME }}  # Name of your Azure Web App
-        package: ./publish  
+      # Step 3: Deploy to Azure Web App
+      # Uses Azure's deployment action to push code to App Service
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.APP_NAME }}  # Use the environment variable
+          package: ./publish
