Enhance build workflow: install TypeScript types and add build step; update publish command to skip build

--- a/.github/workflows/build1.yml
+++ b/.github/workflows/build1.yml
@@ -37,7 +37,13 @@ jobs:
         
     - name: Install npm packages
       working-directory: ./AzureWorkshopApp
-      run: npm ci
+      run: |
+        npm ci
+        npm install --save-dev @types/dropzone
+        
+    - name: Build TypeScript
+      working-directory: ./AzureWorkshopApp
+      run: npm run build
         
     - name: Restore dependencies
       run: dotnet restore
