--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,7 @@ jobs:
         
     - name: Publish
       working-directory: ./AzureWorkshopApp
-      run: dotnet publish --configuration Release --output ./publish
+      run: dotnet publish --no-build --configuration Release --output ./publish
         
     - name: Upload artifact
       uses: actions/upload-artifact@v4
