--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,9 +14,13 @@ jobs:
       with:
         dotnet-version: '8.0.x'
         
+    - name: Restore dependencies
+      working-directory: ./AzureWorkshopApp
+      run: dotnet restore
+        
     - name: Publish
       working-directory: ./AzureWorkshopApp
-      run: dotnet publish --no-build --configuration Release --output ./publish
+      run: dotnet publish --configuration Release --output ./publish
         
     - name: Upload artifact
       uses: actions/upload-artifact@v4
