Update artifact name format in deployment workflow to match publish.yml

--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: dotnet-app    # Name of the artifact to download
+          name: dotnet-app-${{ github.sha }}    # Updated to match the artifact name format in publish.yml
           path: ./publish     # Where to place the files locally
 
       # Step 3: Deploy to Azure Web App
