Bicep - leksjon ok (#26)
* Added first bicep files

* lagt til yaml file for IaC

* lagt på logging på lint

* Forsøk på deploy med azure/arm-deploy

* fjernet parameter fro build

* Byttet fra dev til TEST

* added resource group

* byttet scope to subscription

* scope til resource group

* Hardkodet ressursgruppe

* inlineScript validate

* Lagt til inline what-if

* Fjernet parametre

* delt opp bicep mal. test og whatif

* lagt til feilsjekk

* skrudd av whatif

* Ryddet opp i filer

* whatif with arm-deploy

* Reorganiserer yaml filer. Deler opp i app og infrastruktur

* Reorganiserer

* Flyttet yaml to workspaces root

* Slettet main.yml

* Fikset galt scope

* Added npm install fro dropzone

* Gjort application yaml modulær, igjen

* endret til små bokstaver

* revertet til tidligere

* byttet fram igjen

* flyttet submodul opp til root

* Lagt til permission og endret filter path

* FIkset permission

* Update GitHub Actions workflow and Bicep template with enhanced permissions and documentation

* Refactor GitHub Actions workflow to consolidate permissions for deployment jobs

* Update Azure deployment workflow to prepend 'app' to web app name for health check

* Refactor Azure deployment workflows to use variable for web app name instead of secret

* Add debug step to print webapp_var_name in Azure deployment workflow

* Fix syntax for webapp_var_name in Azure deployment workflow

* Fix variable syntax in Azure deployment workflows and add debug step for context printing

* Remove redundant debug output from Azure deployment workflow

* Update webapp_var_name in Azure deployment workflow to use a fixed app name

* Refactor Azure deployment workflows: remove obsolete deploy-azure.yml and update infrastructure.yml for streamlined deployment process

* Refactor Azure deployment workflows: consolidate deploy-azure.yml and update references in infrastructure.yml

* Refactor Azure deployment workflows: add environment variables and validate Bicep templates

* R

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,20 +1,13 @@
-name: Build .NET App
+name: Build
 
 on:
   workflow_call:
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
       
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
@@ -37,14 +30,12 @@ jobs:
         
     - name: Install npm packages
       working-directory: ./AzureWorkshopApp
-      run: |
-        npm ci
-        npm install --save-dev @types/dropzone
+      run: npm ci
         
     - name: Restore dependencies
-      run: dotnet restore
       working-directory: ./AzureWorkshopApp
+      run: dotnet restore
         
     - name: Build
-      run: dotnet build --no-restore --configuration Release
       working-directory: ./AzureWorkshopApp
+      run: dotnet build --no-restore --configuration Release
