--- a/.github/workflows/deploy1.yml
+++ b/.github/workflows/deploy1.yml
@@ -1,38 +1,41 @@
-# This workflow handles the deployment of our application to Azure Web App Service
-# It's called by the main.yml workflow after build and login steps complete
 name: Deploy to Azure
 
-# Indicates this workflow can be called by other workflows
-# This enables modular workflow design and reusability
 on:
+  workflow_dispatch:
   workflow_call:
+    inputs:
+      releaseType:
+        description: 'Where to release (test or prod)?'
+        type: string
+        required: true
+        default: 'test'
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest    # Using Ubuntu for deployment tasks
-    environment: test         # Links to GitHub Environment 'test' containing deployment variables
+    name: Deploy to ${{ inputs.releaseType }}
+    environment: ${{ inputs.releaseType }}
+
+    runs-on: ubuntu-latest
+    
+    env:
+      APP_NAME: app-azskolen-${{ inputs.releaseType }}
     
     steps:
-    # Move Azure login step
-    - name: Azure Login
-      uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      - name: Azure Login
+        uses: azure/login@v2
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-    # First, retrieve the build artifacts that were created in the build job
-    # These artifacts contain our compiled application ready for deployment
-    - name: Download artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: dotnet-app      # Must match the artifact name from build.yml
-        path: ./publish       # Local path where artifacts will be downloaded
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: dotnet-app-${{ github.sha }}
+          path: ./publish
 
-    # Deploy the application to Azure Web App
-    # This step requires prior Azure authentication from 'Azure login step'
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ vars.AZURE_WEBAPP_NAME }}  # Name of your Azure Web App
-        package: ./publish  
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.APP_NAME }}
+          package: ./publish
